@@ -1,6 +1,7 @@
 2.4.10
 
 * new plugins API
+* new architecture for Singleton plugins
 * new plugins category: authmanager/auth/ 
 * added method condorhistorylib() to condor.py
 * added input option extra_attributes to method querycondorlib()
